<resources>
    <string name="app_name">Studs</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="share_hint">What\'s the plan?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_todo_fragment">Things to do</string>
    <string name="title_post_fragment">Latests Shares</string>
    <string name="hint_login_name">name</string>
    <string name="hint_login_password">password</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="friends_hint">Who\'s going?</string>
    <string name="address_hint">Address?</string>
    <string name="attraction">Attraction</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="other">Other</string>
</resources>
