<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".components.share.ShareActivity"
    >

    <android.support.design.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/share_post_height"
                    android:padding="@dimen/margin_normal"
                    android:gravity="start"
                    android:textSize="@dimen/font_size_large"
                    android:background="@android:color/transparent"
                    android:hint="@string/share_hint"
                    android:imeOptions="actionDone"
                    />

                <include
                    layout="@layout/divider" />

                <AutoCompleteTextView
                    android:id="@+id/friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_normal"
                    android:gravity="start"
                    android:textSize="@dimen/font_size_large"
                    android:background="@android:color/transparent"
                    android:hint="@string/friends_hint"
                    android:inputType="text"
                    />

                <include
                    layout="@layout/divider" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_normal"
                    android:gravity="start"
                    android:textSize="@dimen/font_size_large"
                    android:background="@android:color/transparent"
                    android:hint="@string/address_hint"
                    android:inputType="text"
                    />

                <include
                    layout="@layout/divider" />

                <LinearLayout
                    android:id="@+id/categories"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_normal"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/attraction"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_camera"
                        android:backgroundTint="@android:color/transparent"
                        android:text="@string/attraction"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_horizontal"
                        android:background="?attr/selectableItemBackground"
                        style="@style/AlphaText"
                        />

                    <TextView
                        android:id="@+id/food"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:text="@string/food"
                        android:gravity="center_horizontal"
                        android:drawableTop="@drawable/ic_food"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        style="@style/AlphaText"
                        />

                    <TextView
                        android:id="@+id/drink"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:text="@string/drink"
                        android:gravity="center_horizontal"
                        android:drawableTop="@drawable/ic_drink"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        style="@style/AlphaText"
                        />

                    <TextView
                        android:id="@+id/other"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:text="@string/other"
                        android:gravity="center_horizontal"
                        android:drawableTop="@drawable/ic_other"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        style="@style/AlphaText"
                        />

                </LinearLayout>

                <include
                    layout="@layout/divider"
                    />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/margin_very_large"
                    android:clipToPadding="false"
                    />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="@dimen/margin_normal"
            android:backgroundTint="@color/colorAccent"
            android:src="@drawable/ic_send_black_24dp"
            android:tint="#666"
            app:borderWidth="0dp"
            app:elevation="4dp"
            app:fabSize="normal"
            />

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/studs_dark"
        android:fitsSystemWindows="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop ="@dimen/margin_small"
            android:paddingStart="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:text="Secret debug menu"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                android:alpha="0.05"
                android:layout_gravity="top"
                />

            <se.studieresan.studs.debug.ModelExplorerView
                android:id="@+id/debug"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
